Fix #13. Trigger collapse/expand node by double click.

--- a/styles/structure-view.less
+++ b/styles/structure-view.less
@@ -27,6 +27,10 @@
     margin-right: 2px;
   }
 
+  .full-menu {
+    user-select: none;
+  }
+
   div.symbol-mixed-block {
     display: flex;
     align-items: center;
